--- a/src/assets/CSS/header.css
+++ b/src/assets/CSS/header.css
@@ -1,5 +1,10 @@
 header{
-    width: 100%;
+    max-width: 100%;
     background-color: #ff0000;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
 }
